@@ -420,7 +420,7 @@ uint32_t ctrl_idx[8] = {PCNT_CTRL_CH0_IN0_IDX, PCNT_CTRL_CH0_IN1_IDX,
                         PCNT_CTRL_CH0_IN4_IDX, PCNT_CTRL_CH0_IN5_IDX,
                         PCNT_CTRL_CH0_IN6_IDX, PCNT_CTRL_CH0_IN7_IDX};
 
-bool _esp32_attachToPulseCounter(uint8_t pcnt_unit, FastAccelStepper *stepper) {
+bool _esp32_attachToPulseCounter(uint8_t pcnt_unit, FastAccelStepper *stepper, int16_t low_value, int16_t high_value) {
   // TODO: Check if free pulse counter
 
   pcnt_config_t cfg;
@@ -440,8 +440,8 @@ bool _esp32_attachToPulseCounter(uint8_t pcnt_unit, FastAccelStepper *stepper) {
   }
   cfg.pos_mode = PCNT_COUNT_INC;  // increment on rising edge
   cfg.neg_mode = PCNT_COUNT_DIS;  // ignore falling edge
-  cfg.counter_h_lim = 16384;
-  cfg.counter_l_lim = -16384;
+  cfg.counter_h_lim = high_value;
+  cfg.counter_l_lim = low_value;
   cfg.unit = (pcnt_unit_t)pcnt_unit;
   cfg.channel = PCNT_CHANNEL_0;
   pcnt_unit_config(&cfg);
@@ -461,6 +461,9 @@ bool _esp32_attachToPulseCounter(uint8_t pcnt_unit, FastAccelStepper *stepper) {
   pcnt_counter_clear(cfg.unit);
   pcnt_counter_resume(cfg.unit);
   return true;
+}
+void _esp32_clearPulseCounter(uint8_t pcnt_unit) {
+  pcnt_counter_clear((pcnt_unit_t)pcnt_unit);
 }
 int16_t _esp32_readPulseCounter(uint8_t pcnt_unit) {
   // Serial.println(' ');
